static/css/theme-mine.css
/* ... */
@font-face {
font-family: "Iosevka Term";
font-style: italic;
font-weight: 700;
src: local(""),
    url("/fonts/iosevka-term-regular-subset.woff2") format("woff2");
    unicode-range: U+0020-007E, U+0080-00FF;
font-display: block;
}

html, body {
    color: var(--MAIN-TEXT-color) !important;
    background-color: var(--MAIN-TEXT-background-color) !important;
    font-family: "Atkinson" !important;
    font-size: 20px !important;
}


textarea:focus, input[type="email"]:focus, input[type="number"]:focus, input[type="password"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="text"]:focus, input[type="url"]:focus, input[type="color"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus, select[multiple=multiple]:focus {
    border-color: none;
    box-shadow: none;
}

h2, h3, h4, h5 {
    color: var(--MAIN-TITLES-TEXT-color) !important;
}

.children-h2 p, .children-h3 p {
    font-size: inherit;
}

body a {
    color: var(--MAIN-LINK-color);
}

body a:hover {
    color: var(--MAIN-LINK-HOVER-color);
}

.anchor {
    color: var(--MAIN-ANCHOR-color);
}

a:hover {
    color: var(--MAIN-LINK-HOVER-color);
}

#sidebar ul li.visited > a .read-icon {
    color: var(--MENU-VISITED-color);
}

#body a.highlight:after {
    display: block;
    content: "";
    height: 1px;
    width: 0%;
    -webkit-transition: width 0.5s ease;
    -moz-transition: width 0.5s ease;
    -ms-transition: width 0.5s ease;
    transition: width 0.5s ease;
    background-color: var(--MAIN-LINK-HOVER-color);
}


#sidebar {
    background-color: var(--MENU-SECTIONS-BG-color);
}
#sidebar #header-wrapper {
    background: var(--MENU-HEADER-BG-color);
    color: var(--MENU-SEARCH-BOX-color);
    border-color: var(--MENU-HEADER-BORDER-color);
}
#sidebar .searchbox {
    border-color: var(--MENU-SEARCH-BOX-color);
    background: var(--MENU-SEARCH-BG-color);
}

#sidebar ul.topics > li.parent, #sidebar ul.topics > li.active {
    background: var(--MENU-SECTIONS-ACTIVE-BG-color);
}
#sidebar .searchbox * {
    color: var(--MENU-SEARCH-BOX-ICONS-color);
}

#sidebar li.active > div a {
    color: var(--MENU-SECTION-ACTIVE-CATEGORY-color);
}

#sidebar a {
    color: var(--MENU-SECTIONS-LINK-color);
}

#sidebar a:hover {
    color: var(--MENU-SECTIONS-LINK-HOVER-color);
}

#sidebar ul li.active > div {
    padding-right: 20px;
}

#sidebar ul li.active > a {
    background: var(--MENU-SECTION-ACTIVE-CATEGORY-BG-color);
    color: var(--MENU-SECTION-ACTIVE-CATEGORY-color) !important;
}

#sidebar hr {
    border-color: var(--MENU-SECTION-HR-color);
}

div.section {
    opacity: 1;
}

h1 {
    text-transform: capitalize;
    font-size: 2rem !important;
}

h4 {
    font-size: 1.2rem !important;
    font-family: "Iosevka Term";
}

pre {
    background-color: var(--CODE-SECTION-BG-color) !important;
}

pre code, pre.code {
    font-size: 0.9rem !important;
    font-family: "Iosevka Term" !important;
}

div.progress  {
    height: auto;
    overflow: auto;
    background-color: var(--progress);
}

body.dark span.hljs-keyword {
    color: #00E5FF55;
}

body.light code.hljs {
    color: black;
}

body.dark code.hljs {
    color: white;
}


footer.footline {
    border-top: 1px none;
    border-top: var(--footer-color);
}

.vql_type.page-header {
    margin-top: -30px;
}

table .vql_type {
    padding: 20px;
}

.vql_type {
    font-size: 0.9em;
    text-align: center;
    color: var(--vql);
}

h4.subtitle {
    text-align: center;
    font-style: italic;
}

blockquote h1 {
    font-size: 2rem;
}


div.mynotices {
    margin: 2rem 0;
    position: relative;
}

div.mynotices > div {
    padding: 15px;
    display: block;
    font-size: 1rem;
    margin-top: 0rem;
    margin-bottom: 0rem;
    color: var(--mynotice);
}

div.mynotices.tip > div:first-child:before {
    content: "\f0eb";
}

div.mynotices.note > div:first-child:before {
    content: "\f249";
}

div.mynotices.warning > div:first-child:before {
    content: "\f1e2";
}


div.mynotices > div:first-child:before {
    position: absolute;
    top: 2px;
    color: var(--mynotices-first-child);
    font-family: "Font Awesome 5 Free";
    font-weight: 900;
    content: "\f06a";
    left: 10px;
}

div.mynotices > div:first-child:after {
    position: absolute;
    top: 2px;
    color: var(--mynotices-first-child);
    left: 2rem;
}

div.mynotices.info > div {
    border-top: 30px solid var(--mynotice-info-border);
    background: var(--mynotice-info-background);
}

div.mynotices > div:first-child:after {
    content: attr(heading);
    text-transform: capitalize;
    color: var(--mynotices);
}

div.mynotices.warning > div {
    border-top: 30px solid var(--mynotice-warning-border);
    background: var(--mynotice-warning-background);
}

div.mynotices.note > div {
    border-top: 30px solid var(--mynotice-note-border);
    background: var(--mynotice-note-background);
}

div.mynotices.tip > div {
    border-top: 30px solid var(--mynotice-tip-border);
    background: var(--mynotice-tip-background);
}

#body img.shadow, #body .video-container.shadow {
    box-shadow: 0 10px 30px rgb(0 0 0 / 50%);
}

a[data-featherlight] img {
    box-shadow: 0 10px 30px rgb(0 0 0 / 50%);
}


h1, h2, h3, h4, h5, h6 {
    font-family: 'Noto Sans', sans-serif !important;
    font-weight: 600;
    color: var(--h-num);
    text-align: left;
    line-height: 1.2;
    display: block;
    margin-bottom: 1rem;
}

h2 {
    font-size: 28px;
}

h1 {
    font-size: 34px;
}

div#header {
    height: 166px;
}

ul.topics {
    width: 300px;
}


ul.topics li {
    overflow: hidden;
    border-top: 1px solid var(--topic-top);
    border-bottom: 1px solid var(--topic-bottom);
}

.copy-to-clipboard {
    display: none;
}

pre:hover .copy-to-clipboard {
    display: inline;
    width: 45px;
    height: 2rem;
    border-radius: 5px;
}
/* ... */

